Modificações no contexto h1

--- a/html5/h1/h1.md
+++ b/html5/h1/h1.md
@@ -9,3 +9,11 @@ Como destacado no exemplo abaixo,
 <div align="center">
   <img src="Screenshot_2.png">
 </div>
+
+Tag HTML - h1: um elemento HTML que corresponde o coonteúdo exibido como um título da aplicação. 
+
+Existindo as suas devidas variações: h1, h2, h3, h4, h5 e h6
+
+Cada elemento com a inúmeração menor representa maior importância. Se a inumeráção for maior, na aplicação representa menos destaque.
+
+Geralmente essas tags são utiloizadas para definir títulos na aplicação e subtitulos com suas derivações de um contexto principal que é agrupada com seus contexto especifico.
